<resources>
    <string name="app_name">TestTesk9</string>
    <string name="first_name">First name</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?   </string>
    <string name="log_in">Log in</string>
    <string name="sing_in_with_google">Sign in with Google</string>
    <string name="sing_in_with_apple">Sign in with Apple</string>
    <string name="_180_000">$ 180,000</string>
    <string name="samsung_s10">Samsung S10</string>
    <string name="phones">Phones</string>
    <string name="image_product">image product</string>
    <string name="add_button">add button</string>
    <string name="_30_off">30% off</string>
    <string name="trade_by">Trade by </string>
    <string name="_bata">bata</string>
    <string name="_location">Location</string>
    <string name="what_are_you_looking_for">What are you looking for ?</string>
    <string name="menu_button">menu button</string>
    <string name="avatar">avatar</string>
    <string name="select_location">select location</string>
    <string name="headphones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">kids</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="flash_sale">Flash sale</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="satria_adhi_pradana">Satria Adhi Pradana</string>
    <string name="upload_item">Upload item</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="_1593">$ 1593</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
</resources>