<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/density_button"
        android:layout_width="22dp"
        android:layout_height="21dp"
        android:src="@drawable/ic_density_small"
        android:layout_marginStart="15dp"
        android:layout_marginTop="54.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/menu_button" />
    
    <TextView
        android:id="@+id/trade_by_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/trade_by"
        android:textColor="@color/black"
        android:layout_marginStart="100dp"
        android:layout_marginTop="53dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/bata_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/_bata"
        android:textColor="@color/blue_400"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/trade_by_text"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar_image"
        android:layout_width="32dp"
        android:layout_height="30dp"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_location"
        android:textColor="@color/gray_600"
        android:textSize="10sp"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatar_image"
        tools:ignore="SmallSp"/>

    <ImageButton
        android:id="@+id/select_location_button"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:src="@drawable/ic_keyboard_arrow_down"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toBottomOf="@id/avatar_image"
        app:layout_constraintStart_toEndOf="@id/location_text"
        android:contentDescription="@string/select_location" />

    <EditText
        android:id="@+id/search_edit_text"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:textSize="9sp"
        android:background="@color/gray_100"
        android:fontFamily="@font/montserrat"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="7dp"
        android:drawableEnd="@drawable/ic_search"
        android:hint="@string/what_are_you_looking_for"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="56dp"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/trade_by_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SmallSp"/>

    <!-- Spread Chain -->

    <ImageButton
        android:id="@+id/spread_chain_view_header"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@drawable/roundedbutton40"
        android:layout_marginTop="17dp"
        android:src="@drawable/ic_phone"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/spread_chain_view_2"
        android:contentDescription="@string/phones" />

    <ImageButton
        android:id="@+id/spread_chain_view_2"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@drawable/roundedbutton40"
        android:src="@drawable/ic_headphones"
        app:layout_constraintTop_toTopOf="@id/spread_chain_view_header"
        app:layout_constraintStart_toEndOf="@id/spread_chain_view_header"
        app:layout_constraintEnd_toStartOf="@id/spread_chain_view_3"
        android:contentDescription="@string/headphones" />

    <ImageButton
        android:id="@+id/spread_chain_view_3"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@drawable/roundedbutton40"
        android:src="@drawable/ic_gemes"
        app:layout_constraintTop_toTopOf="@id/spread_chain_view_2"
        app:layout_constraintStart_toEndOf="@id/spread_chain_view_2"
        app:layout_constraintEnd_toStartOf="@id/spread_chain_view_4"
        android:contentDescription="@string/games" />

    <ImageButton
        android:id="@+id/spread_chain_view_4"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@drawable/roundedbutton40"
        android:src="@drawable/ic_cars"
        app:layout_constraintTop_toTopOf="@id/spread_chain_view_3"
        app:layout_constraintStart_toEndOf="@id/spread_chain_view_3"
        app:layout_constraintEnd_toStartOf="@id/spread_chain_view_5"
        android:contentDescription="@string/cars" />

    <ImageButton
        android:id="@+id/spread_chain_view_5"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@drawable/roundedbutton40"
        android:src="@drawable/ic_furniture"
        app:layout_constraintTop_toTopOf="@id/spread_chain_view_4"
        app:layout_constraintStart_toEndOf="@id/spread_chain_view_4"
        app:layout_constraintEnd_toStartOf="@id/spread_chain_view_6"
        android:contentDescription="@string/furniture" />

    <ImageButton
        android:id="@+id/spread_chain_view_6"
        android:layout_width="42dp"
        android:layout_height="38dp"
        android:background="@drawable/roundedbutton40"
        android:src="@drawable/ic_kids"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/spread_chain_view_5"
        app:layout_constraintTop_toTopOf="@id/spread_chain_view_5"
        android:contentDescription="@string/kids" />

    <TextView
        android:id="@+id/phones_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phones"
        android:textSize="8sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/gray_200"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="@id/spread_chain_view_header"
        app:layout_constraintEnd_toEndOf="@id/spread_chain_view_header"
        app:layout_constraintTop_toBottomOf="@id/spread_chain_view_header"
        tools:ignore="SmallSp"/>

    <TextView
        android:id="@+id/headphones_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headphones"
        android:textSize="8sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/gray_200"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="@id/spread_chain_view_2"
        app:layout_constraintEnd_toEndOf="@id/spread_chain_view_2"
        app:layout_constraintTop_toBottomOf="@id/spread_chain_view_2"
        tools:ignore="SmallSp"/>

    <TextView
        android:id="@+id/games_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        android:textSize="8sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/gray_200"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="@id/spread_chain_view_3"
        app:layout_constraintEnd_toEndOf="@id/spread_chain_view_3"
        app:layout_constraintTop_toBottomOf="@id/spread_chain_view_3"
        tools:ignore="SmallSp"/>

    <TextView
        android:id="@+id/cars_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        android:textSize="8sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/gray_200"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="@id/spread_chain_view_4"
        app:layout_constraintEnd_toEndOf="@id/spread_chain_view_4"
        app:layout_constraintTop_toBottomOf="@id/spread_chain_view_4"
        tools:ignore="SmallSp"/>

    <TextView
        android:id="@+id/furniture_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/furniture"
        android:textSize="8sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/gray_200"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="@id/spread_chain_view_5"
        app:layout_constraintEnd_toEndOf="@id/spread_chain_view_5"
        app:layout_constraintTop_toBottomOf="@id/spread_chain_view_5"
        tools:ignore="SmallSp"/>

    <TextView
        android:id="@+id/kids_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kids"
        android:textSize="8sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/gray_200"
        android:layout_marginTop="11dp"
        app:layout_constraintStart_toStartOf="@id/spread_chain_view_6"
        app:layout_constraintEnd_toEndOf="@id/spread_chain_view_6"
        app:layout_constraintTop_toBottomOf="@id/spread_chain_view_6"
        tools:ignore="SmallSp"/>

    <TextView
        android:id="@+id/latest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest"
        android:textSize="15sp"
        android:textColor="@color/black_900"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="29dp"
        android:layout_marginStart="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phones_image_text"/>

    <TextView
        android:id="@+id/view_all_latest_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:textSize="9sp"
        android:textColor="@color/gray_800"
        android:fontFamily="@font/poppins_medium"
        android:clickable="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phones_image_text"
        tools:ignore="SmallSp"
        android:focusable="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/latest_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="2dp"
        android:layout_marginStart="5dp"
        tools:listitem="@layout/latest_item_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latest_text"/>

    <TextView
        android:id="@+id/flash_sale_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flash_sale"
        android:textSize="15sp"
        android:textColor="@color/black_900"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="11dp"
        android:layout_marginStart="11dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latest_recyclerview"/>

    <TextView
        android:id="@+id/view_all_flash_sale_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_all"
        android:textSize="9sp"
        android:textColor="@color/gray_800"
        android:fontFamily="@font/poppins_medium"
        android:clickable="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/latest_recyclerview"
        tools:ignore="SmallSp"
        android:focusable="true" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/flash_sale_recyclerview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginTop="3dp"
        android:layout_marginStart="6dp"
        tools:listitem="@layout/flash_sale_item_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flash_sale_text"/>


</androidx.constraintlayout.widget.ConstraintLayout>