<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="114dp"
    android:layout_height="149dp"
    android:layout_margin="6dp"
    app:cardCornerRadius="9dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image_product" />

        <TextView
            android:id="@+id/product_category_text"
            android:layout_width="35dp"
            android:layout_height="12dp"
            android:text="@string/phones"
            android:textSize="6sp"
            android:fontFamily="@font/poppins_semibold"
            android:background="@color/gray_400"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="46dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/product_name_text"
            android:layout_width="75dp"
            android:layout_height="26dp"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="17dp"
            android:text="@string/samsung_s10"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_180_000"
            android:textSize="7sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="7dp"
            android:layout_marginBottom="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/roundedbutton20"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/add_button" />
        
        <ImageView
            android:id="@+id/add_image"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:background="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="@+id/add_button"
            app:layout_constraintStart_toStartOf="@+id/add_button"
            app:layout_constraintEnd_toEndOf="@+id/add_button"
            app:layout_constraintTop_toTopOf="@+id/add_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>