<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="174dp"
    android:layout_height="221dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="11dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/image_product" />
        
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/avatar_icon_image"
            android:layout_margin="7dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/product_category_text"
            android:layout_width="50dp"
            android:layout_height="17dp"
            android:text="@string/phones"
            android:textSize="9sp"
            android:fontFamily="@font/poppins_semibold"
            android:background="@color/gray_400"
            android:gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="83dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/product_name_text"
            android:layout_width="87dp"
            android:layout_height="36dp"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="41dp"
            android:text="@string/samsung_s10"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_180_000"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="SmallSp" />

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/roundedbutton35"
            android:src="@drawable/ic_add"
            android:layout_marginBottom="7dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/add_button" />

        <ImageButton
            android:id="@+id/favorite_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/roundedbutton28"
            android:src="@drawable/ic_favorite_border"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintEnd_toStartOf="@id/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/add_button" />

        <TextView
            android:id="@+id/sale_text"
            android:layout_width="49dp"
            android:layout_height="18dp"
            android:text="@string/_30_off"
            android:textSize="10sp"
            android:fontFamily="@font/poppins_semibold"
            android:background="@color/red_300"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="7dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SmallSp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>