<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.RegisterFragment">

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="153dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black_500"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/first_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat"
        android:background="@color/gray_500"
        android:layout_gravity="center"
        android:gravity="center"
        app:cornerRadius="15dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/last_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="11sp"
        android:fontFamily="@font/montserrat"
        android:background="@color/gray_500"
        android:layout_gravity="center"
        android:gravity="center"
        app:cornerRadius="15dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:hint="@string/first_name"/>

    <EditText
        android:id="@+id/login_email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textSize="11sp"
        android:background="@color/gray_500"
        android:fontFamily="@font/montserrat"
        android:layout_gravity="center"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/sing_in__button"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="35dp"
        android:text="@string/sign_in"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="false"
        android:textColor="@color/white_500"
        android:textSize="14sp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        app:cornerRadius="15dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account"
                android:layout_marginStart="42dp"
                android:fontFamily="@font/montserrat"
                android:textSize="10sp"
                android:textColor="@color/gray_300"
                tools:ignore="SmallSp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:clickable="true"
                android:fontFamily="@font/montserrat"
                android:textSize="10sp"
                android:textColor="@color/blue_300"
                android:focusable="true"
                tools:ignore="SmallSp" />

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.appcompat.widget.LinearLayoutCompat>